rnsc/test_data/integration/error/parser/outside_class_directive/after_class_dir/dot_annotation.rns
.class public EmptyClass
.super java/lang/Object

.class_end
.annotation actually can't be here
